--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "damienvalade/oc-p7-bilemo",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "type": "library",
     "description": "API for BileMO",
     "authors": [
@@ -20,16 +20,20 @@
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.6",
         "jms/serializer-bundle": "^2.4",
+        "knpuniversity/oauth2-client-bundle": "^1.31",
+        "league/oauth2-google": "^3.0",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/orm-pack": "^1.0",
         "symfony/yaml": "4.4.*",
+        "twig/twig": "~2.0",
         "white-october/pagerfanta-bundle": "^1.3"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.14"
+        "symfony/maker-bundle": "^1.14",
+        "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
         "preferred-install": {
