Update oauth2 to oauth-server-bundle by fos
Update oauth2 to oauth-server-bundle by fos

--- a/.env
+++ b/.env
@@ -15,10 +15,14 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=97ce7bf9a90da871c953517fbf1955bb
+APP_SECRET=e0acfca6061e59bf212dff1021083f19
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
