--- a/composer.json
+++ b/composer.json
@@ -1,83 +1,109 @@
 {
-    "name": "damienvalade/oc-p7-bilemo",
-    "version": "0.2.0",
-    "type": "library",
-    "description": "API for BileMO",
-    "authors": [
-        {
-            "name": "Damien Valade",
-            "email": "damien@damienvalade.fr",
-            "homepage": "https://portfolio.damienvalade.fr/"
-        }
-    ],
-    "support": {
-        "email": "damien@damienvalade.fr",
-        "issues": "https://github.com/damienvalade/OC-P7-BILEMO/issues"
-    },
-    "require": {
-        "php": "^7.1.3",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "friendsofsymfony/rest-bundle": "^2.6",
-        "jms/serializer-bundle": "^2.4",
-        "knpuniversity/oauth2-client-bundle": "^1.31",
-        "league/oauth2-google": "^3.0",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.4.*",
-        "symfony/orm-pack": "^1.0",
-        "symfony/yaml": "4.4.*",
-        "twig/twig": "~2.0",
-        "white-october/pagerfanta-bundle": "^1.3"
-    },
-    "require-dev": {
-        "symfony/maker-bundle": "^1.14",
-        "symfony/web-server-bundle": "4.4.*"
-    },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "4.4.*"
-        }
+  "name": "damienvalade/oc-p7-bilemo",
+  "version": "0.2.0",
+  "type": "library",
+  "description": "API for BileMO",
+  "authors": [
+    {
+      "name": "Damien Valade",
+      "email": "damien@damienvalade.fr",
+      "homepage": "https://portfolio.damienvalade.fr/"
     }
+  ],
+  "support": {
+    "email": "damien@damienvalade.fr",
+    "issues": "https://github.com/damienvalade/OC-P7-BILEMO/issues"
+  },
+  "require": {
+    "php": "^7.1.3",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "ext-json": "*",
+    "csa/guzzle-bundle": "^3.1",
+    "friendsofsymfony/oauth-server-bundle": "^1.6",
+    "friendsofsymfony/rest-bundle": "^2.6",
+    "friendsofsymfony/user-bundle": "^2.1",
+    "jms/serializer-bundle": "^3.5",
+    "nelmio/api-doc-bundle": "^3.5",
+    "sensio/framework-extra-bundle": "^5.1",
+    "symfony/asset": "4.4.*",
+    "symfony/config": "4.4.*",
+    "symfony/console": "4.4.*",
+    "symfony/dotenv": "4.4.*",
+    "symfony/expression-language": "4.4.*",
+    "symfony/flex": "^1.3.1",
+    "symfony/form": "4.4.*",
+    "symfony/framework-bundle": "4.4.*",
+    "symfony/http-client": "4.4.*",
+    "symfony/intl": "4.4.*",
+    "symfony/mailer": "4.4.*",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/orm-pack": "*",
+    "symfony/process": "4.4.*",
+    "symfony/security-bundle": "4.4.*",
+    "symfony/serializer": "4.4.*",
+    "symfony/serializer-pack": "*",
+    "symfony/templating": "4.4.*",
+    "symfony/translation": "4.4.*",
+    "symfony/twig-bundle": "4.4.*",
+    "symfony/twig-pack": "*",
+    "symfony/validator": "4.4.*",
+    "symfony/web-link": "4.4.*",
+    "symfony/web-server-bundle": "4.4.*",
+    "symfony/yaml": "4.4.*",
+    "twig/twig": "2.*",
+    "white-october/pagerfanta-bundle": "^1.2",
+    "willdurand/hateoas-bundle": "2.0.1"
+  },
+  "require-dev": {
+    "symfony/debug-pack": "*",
+    "symfony/maker-bundle": "^1.0",
+    "symfony/profiler-pack": "*",
+    "symfony/test-pack": "*"
+  },
+  "config": {
+    "preferred-install": {
+      "*": "dist"
+    },
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
+  "replace": {
+    "paragonie/random_compat": "2.*",
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "4.4.*"
+    }
+  }
 }
