--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,6 +10,9 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
 
+    templating:
+        engines: ['twig']
+
     #esi: true
     #fragments: true
     php_errors:
