--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,22 +1,45 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory: { memory: null }
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            anonymous: lazy
+  encoders:
+    FOS\UserBundle\Model\UserInterface: bcrypt
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
+  role_hierarchy:
+    ROLE_ADMIN:       ROLE_USER
+    ROLE_SUPER_ADMIN: ROLE_ADMIN
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+  providers:
+    fos_userbundle:
+      id: fos_user.user_provider.username
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+  firewalls:
+    oauth_token:
+      pattern:    ^/oauth/v2/token
+      security:   false
+    oauth_authorize:
+      pattern:    ^/oauth/v2/auth
+      form_login:
+        provider: fos_userbundle
+        check_path: /oauth/v2/auth_login_check
+        login_path: /oauth/v2/auth_login
+        use_referer: true
+    api_doc:
+      pattern: ^/api/doc
+      security: false
+    api:
+      pattern:    ^/api
+      fos_oauth:  true
+      stateless:  true
+      anonymous:  true
+      guard:
+        authenticators:
+          - App\Security\TokenAuthenticator
+    main:
+      pattern: ^/
+      form_login:
+        provider: fos_userbundle
+        csrf_token_generator: security.csrf.token_manager
+      anonymous: true
+
+  access_control:
+    - { path: ^/api, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+    - { path: ^/createClient, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+    - { path: ^/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
