--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
     "symfony/yaml": "4.4.*",
     "twig/twig": "2.*",
     "white-october/pagerfanta-bundle": "^1.2",
-    "willdurand/hateoas-bundle": "2.0.1"
+    "willdurand/hateoas-bundle": "2.0.1",
+    "ext-http": "*"
   },
   "require-dev": {
     "symfony/debug-pack": "*",
