--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,6 +40,6 @@ security:
       anonymous: true
 
   access_control:
-    - { path: ^/api, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+    - { path: ^/api, roles: [ IS_AUTHENTICATED_FULLY ] }
     - { path: ^/createClient, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
     - { path: ^/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
