--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,5 +41,5 @@ security:
 
   access_control:
     - { path: ^/api, roles: [ IS_AUTHENTICATED_FULLY ] }
-    - { path: ^/createClient, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+    - { path: ^/createClient, roles: [ IS_AUTHENTICATED_FULLY ] }
     - { path: ^/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
