--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,8 +3,9 @@ security:
     FOS\UserBundle\Model\UserInterface: bcrypt
 
   role_hierarchy:
-    ROLE_ADMIN:       ROLE_USER
-    ROLE_SUPER_ADMIN: ROLE_ADMIN
+    ROLE_USER:        ROLE_USER
+    ROLE_ADMIN:       ROLE_ADMIN
+    ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN
 
   providers:
     fos_userbundle:
@@ -40,6 +41,6 @@ security:
       anonymous: true
 
   access_control:
-    - { path: ^/api, roles: [ IS_AUTHENTICATED_FULLY ] }
+    - { path: ^/api/admin, roles: [ ROLE_ADMIN ] }
+    - { path: ^/api, roles: [ ROLE_USER ] }
     - { path: ^/createClient, roles: [ IS_AUTHENTICATED_FULLY ] }
-    - { path: ^/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
