--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,6 @@
 fos_oauth_server_token:
-  resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+  path:       /login
+  controller: fos_oauth_server.controller.token:tokenAction
 
 fos_oauth_server_authorize:
   resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
