--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,7 +29,7 @@ security:
       pattern:    ^/api
       fos_oauth:  true
       stateless:  true
-      anonymous:  false
+      anonymous:  true
       guard:
         authenticators:
           - App\Security\TokenAuthenticator
@@ -41,7 +41,7 @@ security:
       anonymous: true
 
   access_control:
-    - { path: ^/api/superadmin, roles: [ ROLE_SUPER_ADMIN ] }
-    - { path: ^/api/admin, roles: [ ROLE_ADMIN ] }
-    - { path: ^/api, roles: [ ROLE_USER ] }
-    - { path: ^/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+    - { path: ^/api/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+    - { path: ^/superadmin, roles: [ ROLE_SUPER_ADMIN ] }
+    - { path: ^/admin, roles: [ ROLE_ADMIN ] }
+    - { path: ^/api/, roles: [ ROLE_USER ] }
