If Enough time v1.1.0
Add mores functions for Super Admin and Admin side
Add more detail in documentation
Fix eventuals bug about this issues

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,6 @@ security:
 
   access_control:
     - { path: ^/api/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
-    - { path: ^/superadmin, roles: [ ROLE_SUPER_ADMIN ] }
-    - { path: ^/admin, roles: [ ROLE_ADMIN ] }
+    - { path: ^/api/superadmin, roles: [ ROLE_SUPER_ADMIN ] }
+    - { path: ^/api/admin, roles: [ ROLE_ADMIN ] }
     - { path: ^/api/, roles: [ ROLE_USER ] }
