--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -8,10 +8,7 @@ fos_rest:
     #    routing_loader: true
   exception:
     enabled: true
-  #        codes:
-  #            App\Exception\MyException: 403
-  #        messages:
-  #            App\Exception\MyException: Forbidden area.
+    exception_controller: 'fos_rest.exception.controller:showAction'
   format_listener:
     rules:
       - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
@@ -22,6 +19,7 @@ fos_rest:
     serialize_null: true
   versioning:
     enabled: true
+    default_version: '1.0'
     resolvers:
       media_type: #Accept header
         enabled: true
