--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "damienvalade/oc-p7-bilemo",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "type": "library",
   "description": "API for BileMO",
   "authors": [
@@ -56,6 +56,7 @@
     "willdurand/hateoas-bundle": "2.0.1"
   },
   "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.3",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
     "symfony/profiler-pack": "*",
