--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "ext-iconv": "*",
     "ext-json": "*",
     "csa/guzzle-bundle": "^3.1",
+    "friendsofsymfony/http-cache-bundle": "^2.8",
     "friendsofsymfony/oauth-server-bundle": "^1.6",
     "friendsofsymfony/rest-bundle": "^2.6",
     "friendsofsymfony/user-bundle": "^2.1",
