--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,5 +43,5 @@ security:
   access_control:
     - { path: ^/api/login, roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
     - { path: ^/api/superadmin, roles: [ ROLE_SUPER_ADMIN ] }
-    - { path: ^/api/admin, roles: [ ROLE_ADMIN ] }
+    - { path: ^/api/admin, roles: [ ROLE_ADMIN, ROLE_SUPER_ADMIN ]  }
     - { path: ^/api/, roles: [ ROLE_USER ] }
